fix path to image in @2x mixin. Update scrollbars settings

--- a/base/general/_general-mixins.scss
+++ b/base/general/_general-mixins.scss
@@ -33,7 +33,7 @@
     @media
     only screen and (-webkit-min-device-pixel-ratio: 2),
     only screen and (min-resolution: 192dpi) {
-        background-image: url('../images/#{$image}');
+        background-image: url('#{$image}');
         background-size: $width $height;
     }
 }
